--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -11,6 +11,12 @@
             "onAutoForward": "notify"
         }
     },
+    "runArgs": [
+        "--cap-add=NET_ADMIN",
+        "--cap-add=CAP_NET_RAW",
+        "--cap-add=CAP_NET_BIND_SERVICE",
+        "--privileged"
+    ],
     "customizations": {
         "vscode": {
             "extensions": [
