cleanup anything left from template

--- a/custom_components/rinnai_fireplace/manifest.json
+++ b/custom_components/rinnai_fireplace/manifest.json
@@ -2,7 +2,7 @@
   "domain": "rinnai_fireplace",
   "name": "RinnaiFireplace",
   "codeowners": [
-    "@ludeeus"
+    "@raedur"
   ],
   "config_flow": true,
   "dependencies": [
